# gdg-lorikeets

./: .gcloudignore  .gitignore  README.md  package-lock.json
.github/workflows/: deploy-frontend.yml  deploy-solver-api.yml  deploy-solver-be.yml
Agent TRIZ — Wireframes/: 01-opis-problemu.html  02-sprzecznosc.html  03-mapowanie.html  04-generowanie.html  05-ocena.html  06-wybor.html  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  index.html  tailwind.css
Agent TRIZ — Wireframes/design/: 01-opis-problemu.html  02-sprzecznosc.html  03-mapowanie.html  04-generowanie.html  05-ocena.html  06-wybor.html  index.html
ai/context/: README.md
ai/evals/: .gitignore  README.md  api_eval.py  be_eval.py  deploy_eval.py  mcp_eval.py  rubric.jsonl  scoreboard.py  scores.example.json  wcs_to_scores.py
ai/solver/: README.md  __init__.py  base.py  demo.py  evaluate.py  pipeline.py  scamper.py  triz.py
example-app/: .env.example  README.md  eval-all.sh  nx.json  package-lock.json  package.json
example-app/deploy/: deploy.sh
example-app/eval-results/: scores.json
mcp-server/: .env.example  cloudbuild.yaml  local_deploy.sh
scamper-mcp-server/: .env.example  .gcloudignore  README.md  cloudbuild.yaml  pyproject.toml
scamper-mcp-server/app/: llm.py  main.py
scamper-mcp-server/app/core/: config.py  logger.py
scamper-mcp-server/app/tools/: __init__.py  scamper.py
solvermaster/: .dockerignore  .gcloudignore  .gitignore  README.md  nx.json  package-lock.json  package.json  tailwind.config.js  tsconfig.base.json
wiki/: Glossary.md  Home.md  Project Overview.md
(+319 files in other folders)
