[project]
name = "scamper-mcp-server"
version = "0.1.0"
description = "SCAMPER ideation MCP server (Gemini-backed) — a second concept-generation method beside the TRIZ MCP server."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27.1",
    "pydantic-settings>=2.7.0",
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
